@@ -26,6 +26,8 @@ Vecsmall([104, 101, 108, 108, 111, 32, 119, 111, 114, 108, 100, 33])
 1
 ["", "a", "b", "", ""]
 ["a", "b", "", "", "", "cc"]
+["a", "b", "c"]
+["a", "b", "c"]
 "a/b/cc"
   ***   at top-level: strchr(-1)
   ***                 ^----------
